--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,29 +15,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CapstoneSejahtera"
         tools:targetApi="31">
-
+        <activity
+            android:name=".DataProfile"
+            android:exported="false" />
         <!-- Aktivitas MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Aktivitas Registrasi -->
+        </activity> <!-- Aktivitas Registrasi -->
         <activity
             android:name=".Registrasi"
-            android:exported="true">
-        </activity>
-
-        <!-- Aktivitas HalamanHome -->
+            android:exported="true"></activity> <!-- Aktivitas HalamanHome -->
         <activity
             android:name=".DashboardActivity"
-            android:exported="true">
-        </activity>
-
+            android:exported="true"></activity>
     </application>
 
 </manifest>
