--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,68 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CapstoneSejahtera"
         tools:targetApi="31">
+
         <activity
             android:name=".DataProfile"
             android:exported="false" />
+
+        <!-- Aktivitas ResikoSatu -->
+        <activity
+            android:name=".ResikoSatu"
+            android:exported="true" />
+
         <!-- Aktivitas MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Aktivitas Registrasi -->
+        </activity>
+
+        <!-- Aktivitas Registrasi -->
         <activity
             android:name=".Registrasi"
-            android:exported="true"></activity> <!-- Aktivitas HalamanHome -->
+            android:exported="true" />
+
+        <!-- Aktivitas HalamanHome -->
         <activity
             android:name=".DashboardActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoDua"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoTiga"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoEmpat"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoLima"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoEnam"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoTujuh"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoDelapan"
+            android:exported="true" />
+
+        <activity
+            android:name=".ResikoSembilan"
+            android:exported="true" />
+
     </application>
 
 </manifest>
