--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,10 @@
         <activity
             android:name=".AcesSaham"
             android:exported="true" />
+
+        <activity
+            android:name=".EmasActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
