--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.CapstoneSejahtera"
         tools:targetApi="31">
         <activity
-            android:name=".AndroSaham"
+            android:name=".NamaSaham.AndroSaham"
             android:exported="false" />
         <activity
             android:name=".SahamActivity"
@@ -73,7 +73,7 @@
             android:name=".ResikoSembilan"
             android:exported="true" />
         <activity
-            android:name=".AcesSaham"
+            android:name=".NamaSaham.AcesSaham"
             android:exported="true" />
         <activity
             android:name=".EmasActivity"
