--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,6 +133,89 @@
             android:name=".namasaham.AcesSaham"
             android:exported="true" />
         <activity
+            android:name=".namasaham.IndfSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.InkpSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.IntpSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.IsatSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.ItmgSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.JpfaSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.JsmrSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.KlbfSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.MapiSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.MbmaSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.MdkaSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.MedcSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.MtelSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.PgasSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.PgeoSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.PtbaSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.PtmpSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.ScmaSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.SidoSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.SmgrSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.SrtgSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.TbigSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.TinsSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.TowrSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.TpiaSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.UntrSaham"
+            android:exported="true" />
+        <activity
+            android:name=".namasaham.UnvrSaham"
+            android:exported="true" />
+
+
+        <activity
             android:name=".EmasActivity"
             android:exported="true" />
     </application>
