--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -163,6 +163,11 @@
             android:name=".namasaham.IndySaham"
             android:exported="true" />
 
+        <activity android:name=".HalamanCatatanKhusus"></activity>
+
+        <activity android:name=".HalamanTabunganKhusus"></activity>
+
+
 
 
         <activity
